--- a/express/code/blocks/template-x-carousel/template-x-carousel.css
+++ b/express/code/blocks/template-x-carousel/template-x-carousel.css
@@ -9,33 +9,8 @@
   --template-purple: #5258e4;
   --toolbar-gap: 20px;
 
-  padding-bottom: var(--template-expand-bot-len);
-  max-width: var(--ax-grid-10-col-width);
   margin: auto;
-  display: flex;
   flex-direction: column; 
-}
-
-.template-x-carousel .toolbar {
-  padding-bottom: calc(var(--spacing-600) - var(--template-expand-top-len));
-  display: flex;
-  flex-direction: column;
-  gap: var(--toolbar-gap);
-}
-
-.template-x-carousel .heading {
-  padding-bottom: var(--spacing-100);
-  line-height: 1.3;
-  font-size: var(--body-font-size-xl);
-  font-weight: 900;
-}
-
-.template-x-carousel .centered-heading {
-  text-align: center;
-  margin-bottom: var(--spacing-400);
-}
-
-.template-x-carousel.search-bar {
   padding-bottom: 0;
   max-width: unset;
   display: grid;
@@ -46,7 +21,25 @@
   margin-bottom: var(--spacing-800);
 }
 
-.template-x-carousel.search-bar .centered-heading {
+.template-x-carousel .toolbar {
+  display: flex;
+  flex-direction: column;
+  grid-column: 2;
+  grid-row: 1;
+  justify-self: end;
+  z-index: 1;
+  padding-bottom: 0;
+  gap: 0;
+}
+
+.template-x-carousel .heading {
+  padding-bottom: var(--spacing-100);
+  line-height: 1.3;
+  font-size: var(--body-font-size-xl);
+  font-weight: 900;
+}
+
+.template-x-carousel .centered-heading {
   grid-column: 1 / -1;
   grid-row: 1;
   margin-bottom: 0;
@@ -58,21 +51,12 @@
   width: 150px;
 }
 
-.template-x-carousel.search-bar .toolbar.search-bar {
-  grid-column: 2;
-  grid-row: 1;
-  justify-self: end;
-  z-index: 1;
-  padding-bottom: 0;
-  gap: 0;
-}
-
-.template-x-carousel.search-bar .templates-container {
+.template-x-carousel .templates-container {
   grid-column: 1 / -1;
   grid-row: 2;
 }
 
-.templates-container.search-bar-gallery .template.gallery--item .still-wrapper .image-wrapper .free-tag {
+.templates-container .template.gallery--item .still-wrapper .image-wrapper .free-tag {
   display: none;
 }
 
@@ -480,7 +464,7 @@
   .template-x-carousel .heading {
     font-size: var(--heading-font-size-s);
   }
-  .template-x-carousel.search-bar .centered-heading {
+  .template-x-carousel .centered-heading {
     width: unset;
     text-align: center;
   }
@@ -493,7 +477,7 @@
 }
 
 @media (min-width: 1200px) {
-  .template-x-carousel.search-bar .centered-heading {
+  .template-x-carousel .centered-heading {
     font-size: var(--body-font-size-xl);
   }
 }
