use panel instead of modular search for bg panel

--- a/express/code/blocks/template-x-carousel/template-x-carousel.css
+++ b/express/code/blocks/template-x-carousel/template-x-carousel.css
@@ -33,13 +33,7 @@
 }
 
 .template-x-carousel .heading {
-  padding-bottom: var(--spacing-100);
   line-height: 1.3;
-  font-size: var(--body-font-size-xl);
-  font-weight: 900;
-}
-
-.template-x-carousel .centered-heading {
   grid-column: 1 / -1;
   grid-row: 1;
   margin-bottom: 0;
@@ -462,9 +456,7 @@
 
 @media (min-width: 600px) {
   .template-x-carousel .heading {
-    font-size: var(--heading-font-size-s);
-  }
-  .template-x-carousel .centered-heading {
+    font-size: var(--body-font-size-l);
     width: unset;
     text-align: center;
   }
@@ -477,7 +469,7 @@
 }
 
 @media (min-width: 1200px) {
-  .template-x-carousel .centered-heading {
+  .template-x-carousel .heading {
     font-size: var(--body-font-size-xl);
   }
 }
