--- a/express/code/styles/styles.css
+++ b/express/code/styles/styles.css
@@ -726,8 +726,7 @@ main .section.secondary {
   background-color: var(--color-gray-100);
 }
 
-/* section containing standalone search bar */
-main .section.modular-search {
+main .section.panel {
   margin: 0 var(--spacing-600) var(--spacing-900) var(--spacing-600); 
   padding: var(--spacing-600) var(--spacing-500);
   border-radius: 16px;
@@ -737,39 +736,39 @@ main .section.modular-search {
 }
 
 @media (max-width: 899px) {
-  main .section.modular-search {
+  main .section.panel {
     margin: 0 var(--spacing-500) var(--spacing-600) var(--spacing-500);
   }
 }
 
 @media (max-width: 599px) {
-  main .section.modular-search {
+  main .section.panel {
     margin: 0 var(--spacing-300) var(--spacing-600) var(--spacing-300);
   }
 }
 
 @media (min-width: 1800px) {
-  main .section.modular-search {
+  main .section.panel {
     margin: 0 auto var(--spacing-900) auto;
     max-width: 1679px;
   }
 }
 
 /* Align link-list with template container when in modular-search */
-main .section.modular-search .link-list-wrapper,
-main .section.modular-search .link-list-wrapper:has(.link-list),
-main .section.modular-search .link-list-wrapper:has(.link-list:is([class*=" "])),
-main .section.modular-search .link-list-wrapper:has(.link-list.inline) {
+main .section.panel .link-list-wrapper,
+main .section.panel .link-list-wrapper:has(.link-list),
+main .section.panel .link-list-wrapper:has(.link-list:is([class*=" "])),
+main .section.panel .link-list-wrapper:has(.link-list.inline) {
   max-width: var(--ax-grid-10-col-width);
   margin: 0 auto;
   padding: 0 28px var(--spacing-500) 28px;
 }
 
 @media (min-width: 1200px) {
-  main .section.modular-search .link-list-wrapper,
-  main .section.modular-search .link-list-wrapper:has(.link-list),
-  main .section.modular-search .link-list-wrapper:has(.link-list:is([class*=" "])),
-  main .section.modular-search .link-list-wrapper:has(.link-list.inline) {
+  main .section.panel .link-list-wrapper,
+  main .section.panel .link-list-wrapper:has(.link-list),
+  main .section.panel .link-list-wrapper:has(.link-list:is([class*=" "])),
+  main .section.panel .link-list-wrapper:has(.link-list.inline) {
     max-width: var(--ax-grid-10-col-width);
     margin: 0 auto;
     padding: 0;
