--- a/express/code/blocks/prompt-marquee/prompt-marquee-delayed.css
+++ b/express/code/blocks/prompt-marquee/prompt-marquee-delayed.css
@@ -56,8 +56,8 @@
 
 .prompt-marquee-input:hover:not(:disabled) {
   border-radius: 10px;
-  border: 2px solid var(--Palette-gray-400, #C6C6C6);
-  background: var(--Palette-gray-25, #FFF);
+  border: 2px solid #c6c6c6;
+  background: #fff;
 }
 
 .prompt-marquee-input:focus-visible:not(:disabled),
@@ -65,15 +65,15 @@
 .prompt-marquee-input:active:not(:disabled) {
   outline: none;
   border-radius: 10px;
-  border: 2px solid var(--Palette-gray-900, #131313);
-  background: var(--Palette-gray-25, #FFF);
+  border: 2px solid #131313;
+  background: #fff;
   box-shadow: none;
 }
 
 .prompt-marquee-input:disabled {
   border-radius: 10px;
-  border: 2px solid var(--Palette-gray-300, #DADADA);
-  background: var(--Palette-gray-25, #FFF);
+  border: 2px solid #dadada;
+  background: #fff;
   color: #9e9e9e;
 }
 
