--- a/express/code/blocks/prompt-marquee/prompt-marquee-delayed.css
+++ b/express/code/blocks/prompt-marquee/prompt-marquee-delayed.css
@@ -56,8 +56,8 @@
 
 .prompt-marquee-input:hover:not(:disabled) {
   border-radius: 10px;
-  border: 2px solid #c6c6c6;
-  background: #fff;
+  border: 2px solid var(--color-gray-400-variant);
+  background: var(--color-white);
 }
 
 .prompt-marquee-input:focus-visible:not(:disabled),
@@ -65,16 +65,16 @@
 .prompt-marquee-input:active:not(:disabled) {
   outline: none;
   border-radius: 10px;
-  border: 2px solid #131313;
-  background: #fff;
+  border: 2px solid var(--color-default-font);
+  background: var(--color-white);
   box-shadow: none;
 }
 
 .prompt-marquee-input:disabled {
   border-radius: 10px;
-  border: 2px solid #dadada;
-  background: #fff;
-  color: #9e9e9e;
+  border: 2px solid var(--color-gray-300-variant);
+  background: var(--color-white);
+  color: var(--color-gray-350);
 }
 
 .prompt-marquee-input-wrapper:has(.prompt-marquee-input:focus)::before,
