--- a/express/code/styles/styles.css
+++ b/express/code/styles/styles.css
@@ -17,6 +17,7 @@
   --color-gray-400: #b6b6b6;
   --color-gray-400-variant: #C6C6C6;
   --color-gray-500: #909090;
+  --color-gray-350: #9e9e9e;
   --color-gray-600: #686868;
   --color-gray-700: #444;
   --color-gray-700-variant: #464646;
