--- a/express/code/styles/styles.css
+++ b/express/code/styles/styles.css
@@ -21,6 +21,7 @@
   --color-gray-500: #909090;
   --color-gray-350: #9e9e9e;
   --color-gray-600: #686868;
+  --text-color-secondary: #6e6e6e;
   --color-gray-700: #444;
   --color-gray-700-variant: #464646;
   --color-gray-800: #242424;
