--- a/express/code/blocks/prompt-marquee/prompt-marquee-delayed.css
+++ b/express/code/blocks/prompt-marquee/prompt-marquee-delayed.css
@@ -19,7 +19,7 @@
   color: var(--text-color-secondary);
   pointer-events: none;
   transition: all 150ms ease-out;
-  right: 14px;
+  right: var(--spacing-250);
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -33,7 +33,7 @@
 }
 
 .prompt-marquee-input-wrapper:has(.prompt-marquee-input:placeholder-shown) .prompt-marquee-input {
-  padding: 0 0 0 14px;
+  padding: 0 0 0 var(--spacing-250);
   box-sizing: border-box;
 }
 
@@ -46,8 +46,8 @@
 }
 
 .prompt-marquee-input-wrapper:not(:has(.prompt-marquee-input:placeholder-shown)) .prompt-marquee-input {
-  padding-top: 20px;
-  padding-left: 14px;
+  padding-top: var(--spacing-350);
+  padding-left: var(--spacing-250);
 }
 
 .prompt-marquee-input::placeholder {
@@ -55,8 +55,8 @@
 }
 
 .prompt-marquee-input:hover:not(:disabled) {
-  border-radius: 10px;
-  border: 2px solid var(--color-gray-400-variant);
+  border-radius: var(--border-radius-10);
+  border: var(--border-width-2) solid var(--color-gray-400-variant);
   background: var(--color-white);
 }
 
@@ -64,15 +64,15 @@
 .prompt-marquee-input:focus:not(:disabled),
 .prompt-marquee-input:active:not(:disabled) {
   outline: none;
-  border-radius: 10px;
-  border: 2px solid var(--color-default-font);
+  border-radius: var(--border-radius-10);
+  border: var(--border-width-2) solid var(--color-default-font);
   background: var(--color-white);
   box-shadow: none;
 }
 
 .prompt-marquee-input:disabled {
-  border-radius: 10px;
-  border: 2px solid var(--color-gray-300-variant);
+  border-radius: var(--border-radius-10);
+  border: var(--border-width-2) solid var(--color-gray-300-variant);
   background: var(--color-white);
   color: var(--color-gray-350);
 }
@@ -87,8 +87,8 @@
 
 .prompt-marquee-input-wrapper:has(.prompt-marquee-input:focus) .prompt-marquee-input,
 .prompt-marquee-input-wrapper:has(.prompt-marquee-input:focus-visible) .prompt-marquee-input {
-  padding-top: 20px;
-  padding-left: 14px;
+  padding-top: var(--spacing-350);
+  padding-left: var(--spacing-250);
   overflow: auto;
 }
 
