--- a/express/code/blocks/prompt-marquee/prompt-marquee.css
+++ b/express/code/blocks/prompt-marquee/prompt-marquee.css
@@ -1,7 +1,4 @@
 .prompt-marquee {
-  --prompt-marquee-desktop-padding-block: var(--spacing-900);
-  --prompt-marquee-desktop-media-max-width: 571px;
-  --prompt-marquee-media-aspect-ratio: 16 / 9;
   padding-left: var(--spacing-300);
   padding-right: var(--spacing-300);
   padding-top: var(--spacing-600);
@@ -117,15 +114,15 @@ main .prompt-marquee  .column .cta-with-input  .con-button {
 .prompt-marquee .column-picture img {
   width: 100%;
   max-width: 100%;
-  aspect-ratio: var(--prompt-marquee-media-aspect-ratio);
+  aspect-ratio:  16 / 9;
   object-fit: cover;
 }
 
 .prompt-marquee-input {
   height: var(--spacing-700);
   box-sizing: border-box;
-  border-radius: 10px;
-  border: 2px solid var(--color-gray-300-variant);
+  border-radius: var(--border-radius-10);
+  border: var(--border-width-2) solid var(--color-gray-300-variant);
   font-size: var(--body-font-size-m);
   font-family: var(--body-font-family);
   transition: border-color 150ms ease-out, box-shadow 150ms ease-out, background-color 150ms ease-out;
@@ -133,7 +130,7 @@ main .prompt-marquee  .column .cta-with-input  .con-button {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  padding: 0 14px;
+  padding: 0 var(--spacing-250);
 }
 
 .prompt-marquee-input-wrapper {
