--- a/express/code/scripts/widgets/picker.css
+++ b/express/code/scripts/widgets/picker.css
@@ -39,8 +39,22 @@
   line-height: 18px;
   color: #292929;
   cursor: pointer;
+  /* Remove native select styling across all browsers */
   appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  /* Remove default arrow in IE 10/11 */
+  background-image: none;
+  /* Ensure text doesn't overflow */
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
   transition: background-color 130ms ease-in-out;
+}
+
+/* Remove dropdown arrow in IE */
+.picker-select::-ms-expand {
+  display: none;
 }
 
 .picker-input-wrapper::after {
@@ -74,14 +88,26 @@
   background-color: #e1e1e1;
 }
 
-.picker-select:disabled + .picker-input-wrapper::after {
+.picker-input-wrapper .picker-select:disabled ~ ::after {
   opacity: 0.4;
 }
 
+/* Ensure consistent option styling across browsers */
 .picker-option {
-  background-color: var(--color-white, #fff);
-  color: var(--color-default-font, #292929);
   padding: 8px 12px;
+  font-family: var(--body-font-family);
+  font-size: 14px;
+  color: #292929;
+  background-color: #ffffff;
+}
+
+.picker-option:hover {
+  background-color: #f5f5f5;
+}
+
+.picker-option:checked,
+.picker-option:focus {
+  background-color: #e1e1e1;
 }
 
 .picker-help-text {
