--- a/express/code/scripts/widgets/picker.css
+++ b/express/code/scripts/widgets/picker.css
@@ -54,16 +54,10 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 18px;
-  color: #292929 !important;
+  color: #292929;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-}
-
-/* Ensure current value never inherits blue color from active state */
-.picker-container.opened .picker-current-value,
-.picker-button-wrapper .picker-current-value {
-  color: #292929 !important;
 }
 
 .picker-chevron {
@@ -127,14 +121,6 @@
 
 .picker-option-button:hover {
   background-color: #e1e1e1;
-}
-
-.picker-option-button.active {
-  font-weight: 700;
-}
-
-.picker-option-button.active .picker-option-text {
-  color: #5c5ce0;
 }
 
 .picker-option-button.disabled {
