--- a/express/code/scripts/widgets/picker.css
+++ b/express/code/scripts/widgets/picker.css
@@ -42,6 +42,10 @@
 }
 
 .picker-button-wrapper:focus {
+  outline: none;
+}
+
+.picker-button-wrapper:focus-visible {
   background-color: #e1e1e1;
   outline: 2px solid #3B63FB;
   outline-offset: 2px;
@@ -198,6 +202,10 @@
 }
 
 .picker-container.quiet .picker-button-wrapper:focus {
+  outline: none;
+}
+
+.picker-container.quiet .picker-button-wrapper:focus-visible {
   border-bottom-color: #3B63FB;
   background-color: transparent;
 }
