--- a/express/code/blocks/frictionless-quick-action/frictionless-quick-action.css
+++ b/express/code/blocks/frictionless-quick-action/frictionless-quick-action.css
@@ -312,3 +312,38 @@ main .section .frictionless-quick-action .free-plan-widget img.icon.icon-checkma
     color: var(--color-white);
     padding: 4px;
 }
+
+/* QR Code Loader Styles */
+.qr-code-loader {
+    width: 200px;
+    height: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    background-color: #8080804a;
+}
+
+.qr-code-loader svg {
+    width: 44px;
+    height: 44px;
+    animation: rotate-loader 1s linear infinite;
+}
+
+.qr-code-loader.hidden {
+    display: none;
+}
+
+.qr-code-container.hidden {
+    display: none;
+}
+
+@keyframes rotate-loader {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
