--- a/express/code/scripts/widgets/picker.css
+++ b/express/code/scripts/widgets/picker.css
@@ -34,7 +34,7 @@
 
 .picker-button-wrapper {
   position: relative;
-  background-color: var(--color-gray-250);
+  background-color: var(--color-light-gray);
   border-radius: 8px;
   height: 32px;
   display: flex;
@@ -56,7 +56,7 @@
 }
 
 .picker-button-wrapper:focus-visible {
-  background-color: var(--color-gray-250);
+  background-color: var(--color-light-gray);
   outline: 2px solid var(--color-background-accent-default);
   outline-offset: 2px;
 }
@@ -105,6 +105,7 @@
   flex-direction: column;
   gap: 2px;
   box-sizing: border-box;
+  z-index: 1;
 }
 
 .picker-container.opened .picker-options-wrapper {
@@ -159,7 +160,7 @@
   font-size: var(--spacing-250);
   font-weight: 400;
   line-height: var(--spacing-350);
-  color: var(--color-gray-600);
+  color: var(--color-dark-gray);
   padding: 7px 0 0;
 }
 
@@ -179,7 +180,7 @@
 }
 
 .picker-container.side .picker-label {
-  max-width: 104px;
+  min-width: 104px;
   flex-shrink: 0;
 }
 
