--- a/express/code/styles/styles.css
+++ b/express/code/styles/styles.css
@@ -205,6 +205,7 @@
   --ax-detail-transform: uppercase;
 
   --color-dark-gray: #505050;
+  --color-error-red: #d7373f;
   --color-default-font: #131313;
   --color-light-gray-2: #e1e1e1;
 }
