--- a/express/code/scripts/widgets/picker.css
+++ b/express/code/scripts/widgets/picker.css
@@ -106,6 +106,8 @@
   gap: 2px;
   box-sizing: border-box;
   z-index: 1;
+  list-style: none;
+  margin: 0;
 }
 
 .picker-container.opened .picker-options-wrapper {
